# btc_stamps

./: .bumpversion.cfg  .bumpversion.dev.cfg  .bumpversion.main.cfg  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitconfig  .gitignore  .gitmodules  .tool-versions  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  RELEASING.md  SECURITY.md  VERSION  address.py  arc4.py  backend.py  blocks.py  btc_stamps_parser.py  btcstampsarerekt  btcstampsrip  changelog.md  check.py  codecov.yml  config.py  database.py  docker-compose-sample.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sh  knowledge_memory.jsonl  (+19 more)
indexer/: .coveragerc  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  arweave.py  blocks.py  check.py  check_kevin_s3_sync.py  check_market_data_production.py  config.py  coverage_summary.md  debug_blockcount.py  debug_kevin_background.py  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  enhanced_market_data_schema.sql  fetch_requirements.py  fix_kevin_background.md  fix_market_data_source_fields.py  insert_missing_stamp_79209.py  local-dev.sh  poetry.toml  production_fix_summary.md  purge_rebuild_balances_v2.py  pyproject.toml  pytest.ini  reparse.py  requirements.txt  run-container.sh  run-image.sh  run_indexer.sh  send.py  server.py  src101_misclassification_fix_summary.md  src20.py  src721.py  (+11 more)
indexer/bootstrap/: creator.csv  src101price.csv  srcbackground.csv
indexer/ci/: README.md  check_consensus_pkg_pins.py  ci_reparse_multi.py  ci_reparse_subprocess.py  ci_validate_consensus.py  freeze-filter.sh  public_backend.py  refresh-consensus-hashes.sh  refresh-freeze.sh  select_random_ci_blocks.py  smoke_parser_validation.py  validate_checkpoints_vs_reference.py
indexer/docs/: BACKGROUND_PROCESSING_CURRENT_STATE.md  COVERAGE.md  COVERAGE_COMMANDS_SUMMARY.md  CRITICAL_BUG_STAMP_ROLLBACK.md  DATABASE_FIXTURES_MIGRATION_GUIDE.md  DATABASE_FIXTURES_MIGRATION_LEARNINGS.md  MARKET_DATA_OPTIMIZATION_PLAN.md  TEST_FIXTURES_GUIDE.md  async_upload.md  bitcoin.md  block-processing-architecture.md  checkpoint-simulation.md  ci-workflows.md  counterparty-api-workaround.md  data-deduplication.md  frontend-recent-sales-enhancement.md  github-issue-437-update.md  local-development.md  node-health-bug-fix.md  optimization-strategy.md  parse-pre-filter.md  performance-history.md  performance-improvement-plan.md  performance-improvement-results.md  performance-improvement-summary.md  reparse-implementation.md  reparse.md  rust-parser-implementation.md  rust-python-parser-issues.md  rust_parser_optimization.md  src721-recursive-cursed-behavior.md  src721-recursive-implementation-notes.md  src721-recursive-implementation-summary.md  stamp-sales-history-implementation.md  test-strategy-plan.md  test_files_organization.md  testing-summary.md  thread-safety-testing.md
indexer/docs/ARCHIVED/: ASYNC_HOLDER_UPDATE_IMPLEMENTATION.md  HOLDER_COUNT_PERFORMANCE_ISSUES.md  INTEGRATE_HOLDER_UPDATER.md  README.md  SRC20_HOLDER_COUNT_CALCULATION.md  SRC20_HOLDER_COUNT_INTEGRATION.md  UNIFIED_BACKGROUND_PROCESSING.md
indexer/kickstart/: utils.py
indexer/rust_parser/: Cargo.toml
indexer/rust_parser/src/: lib.rs
indexer/snapshots/: CI_HASHES_README.md  ci_consensus_hashes.json  quick_ci.json  reference_hashes.json
indexer/src/: arc4.py  aws.py  backend.py  blocks.py  btc_stamps_parser.py  config.py  database.py  exceptions.py  files.py  log.py  models.py  script.py  server.py  src20.py  src721.py  stamp.py  util.py  xcprequest.py
indexer/src/index_core/: __init__.py  activity_calculator.py  arc4.py  arweave.py  async_holder_updater.py  async_upload.py  aws.py  backend.py  background_coordinator.py  background_validator.py  base64_utils.py  block_validation.py  blocks.py  bootstrap_importer.py  cache_types.py  cache_utils.py  (+56 more)
indexer/tests/: README.md  README_market_data_tests.md  benchmark_async_upload.py  benchmark_rust_filtering.py  bitcoin_fixtures_loader.py  conftest.py  create_test_block.py  create_test_transactions.py  dbSimulation.json  dbSimulation_src101.json  db_simulator.py  db_simulator_src101.py  db_simultator.py  download_test_block.py  mock_transaction.py  parser_snapshot_utils.py  src101_variations_data.py  src20_variations_data.py  stamp_mime_diff.py  test_activity_calculator.py  test_arc4.py  test_async_concurrency_simple.py  test_async_holder_updater.py  test_async_upload.py  test_async_upload_comprehensive.py  test_aws.py  test_aws_integration.py  test_aws_s3_enabled.py  test_backend.py  test_backend_rpc_reconnect.py  test_background_coordinator.py  test_base64_utils.py  test_base64_utils_production_match.py  test_bitcoin_fixtures_loader.py  test_block_rollback.py  test_block_tx.py  test_block_validation.py  test_blocks_behind_calculation.py  test_blocks_coverage.py  test_blocks_fallback_integration.py  (+165 more)
indexer/tools/: analyze_block.py  analyze_src20_balances.py  api_balance_summary.py  api_limits_test_script.py  api_methods_test_script.py  apply_test_markers.py  audit_tick_vs_stampscan.py  backfill_encoding_method.py  balance_comparison_report.py  build_and_push.sh  check_coordinator_status.py  check_fallback_state.py  check_sales_history_status.py  check_specific_balance.py  check_stampscan_divergence.py  check_test_markers.py  checkpoint_updater.py  clear_fallback_state.py  compare_tables.py  convert_backgrounds_to_webp.py  debug_compare_bal.py  debug_import_src_steve.py  dump_block_fixtures.py  dump_seeds.py  dump_state_fixtures.py  export_bootstrap.py  export_db_bootstrap.py  fetch_block_hex.py  fetch_small_block_hex.py  fetch_stamp_721_examples.py  flush_redis_cache.py  import_background.py  improved_fetch_implementation.py  install_extensions.sh  install_hooks.py  ledger_hash_comparison.py  node_health_test_script.py  pipeline_compatibility_test_script.py  quick_redis_check.py  redis_flush_script.sh  (+21 more)
indexer/tools_priv/: README.md
indexer/transaction_helper/: p2sh_encoding.py  serializer.py
(+255 files in other folders)
