[tool.poetry]
name = "indexer"
version = "1.8.0"
description = "Bitcoin Stamps Indexer"
# readme = "README.md"
authors = ["reinamora <reinamora@stampchain.io>"]
homepage = "https://stampchain.io"
repository = "https://github.com/stampchain-io/btc_stamps/"
documentation = "https:/stampchain.io/docs"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.poetry.dev-dependencies]
bandit = "*"

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "1.4.4"
bitcoinlib = "0.6.15"
colorlog = "6.8.2"
sha3 = "0.2.1"
pycoin = "0.92.20230326"
python-bitcoinlib = "0.12.2"
python-bitcoinrpc = "1.0"
regex = "2024.4.28"
requests = "2.31.0"
cachetools = "5.3.3"
pymysql = "1.1.0"
python-docx = "1.1.0"
cryptography = "42.0.5"
pybase64 = "1.3.2"
python-magic = "0.4.27"
boto3 = "1.34.94"
msgpack = "1.0.8"
tqdm = "4.66.2"
python-dotenv = "1.0.1"
colour-runner = "0.1.1"

[tool.poetry.group.arweave.dependencies]
arweave-python-client = "1.0.19"

[tool.poetry.scripts]
indexer = "start:main"

[[tool.poetry.packages]]
from = "src"
include = "index_core/**/*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [".tox", "build"]
ignore = ["E203", "W503"]
