[tool.poetry]
name = "indexer"
version = "1.8.6+canary.1"
description = "Bitcoin Stamps Indexer"
# readme = "README.md"
authors = ["reinamora <reinamora@stampchain.io>"]
homepage = "https://stampchain.io"
repository = "https://github.com/stampchain-io/btc_stamps/"
documentation = "https://stampchain.io/docs"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "1.4.4"
bitcoinlib = "0.6.15"
colorlog = "6.8.2"
# sha3 = "0.2.1"  # Remove this line if not needed
pycoin = "0.92.20230326"
python-bitcoinlib = "0.12.2"
python-bitcoinrpc = "1.0"
regex = "2024.5.15"
requests = "2.32.3"
cachetools = "5.3.3"
pymysql = "1.1.1"
python-docx = "1.1.2"
cryptography = "42.0.8"
pybase64 = "1.3.2"
python-magic = "0.4.27"
boto3 = "1.34.142"
msgpack = "1.0.8"
tqdm = "4.66.4"
python-dotenv = "1.0.1"
colour-runner = "0.1.1"
ecdsa = "0.19.0"
toml = "^0.10.2"

[tool.poetry.group.arweave.dependencies]
arweave-python-client = "1.0.19"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
bandit = "^1.7.9"
flake8 = "^7.1.0"
pillow = "^10.4.0"
isort = "^5.10.1"
mypy = "^1.10.1"
black = "^24.4.2"
types-requests = "^2.31.0"
types-PyMySQL = "^1.0.0"
types-tqdm = "^4.66.0.20240417"
boto3-stubs = "^1.34.142"
msgpack-types = "^0.3.0"
types-appdirs = "^1.4.3.5"
types-cachetools = "^5.3.0.7"
flake8-pyproject = "^1.2.3"
safety = "^3.2.4"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
types-toml = "^0.10.8" 

[tool.poetry.scripts]
indexer = "start:main"
run_safety = "tools.run_safety:run_safety_check"
run_checks = "tools.run_checks:main"
install-hooks = "tools.install_hooks:main"
postinstall = "tools.install_hooks:main"
compare_tables = "tools.compare_tables:main"

[[tool.poetry.packages]]
from = "src"
include = "index_core/**/*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.flake8]
max-line-length = 127
exclude = [".tox", "build"]
extend-ignore = ["E203", "W503", "E402", "E501"]

[tool.taskipy.tasks]
bandit = "bandit -r . -s B608 -lll"
import_background = "poetry run python3 tools/import_background.py"

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
explicit_package_bases = false
namespace_packages = true
exclude = 'tools/'

[tool.safety]
ignore = [
    "64396",  # Ecdsa does not protect against side-channel attacks
    "64459",  # The python-ecdsa library is vulnerable to the Minerva attack
    "67599",   # An issue in pip regarding the --extra-index-url option
    "70612"   # Jinja2, the from_string function is prone to Server Side Template Injection
]