[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "btc_stamps_parser"
features = ["pyo3/extension-module"]
manifest-path = "src/rust_parser/Cargo.toml"

[tool.poetry]
name = "indexer"
version = "1.8.26+canary.159"
description = "Bitcoin Stamps Indexer"
authors = ["reinamora <reinamora@stampchain.io>"]
homepage = "https://stampchain.io"
repository = "https://github.com/stampchain-io/btc_stamps/"
documentation = "https://stampchain.io/docs"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "1.4.4"
bitcoinlib = "0.7.2"
colorlog = "6.9.0"
pyzmq = "^26.2.0"
python-bitcoinlib = "0.12.2"
python-bitcoinrpc = "1.0"
regex = "2024.11.6"
requests = "2.32.3"
cachetools = "5.5.2"
pymysql = "1.1.1"
python-docx = "1.1.2"
cryptography = "44.0.2"
pybase64 = "1.4.1"
python-magic = "0.4.27"
boto3 = "1.37.25"
msgpack = "1.1.0"
python-dotenv = "1.1.0"
colour-runner = "0.1.1"
ecdsa = "0.19.1"
toml = "^0.10.2"
eth-account = "^0.13.3"
psutil = ">=6.1.1"
filelock = ">=3.16.1"
safety = ">=3.2.14"
aiohttp = "^3.11.16"
ratelimit = "^2.2.1"

[tool.poetry.group.arweave.dependencies]
arweave-python-client = "1.0.19"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
bandit = "^1.8.3"
flake8 = "^7.2.0"
pillow = "^11.1.0"
isort = "^6.0.1"
mypy = "^1.10.1"
black = "^25.1.0"
termcolor = "^3.0.1"
types-requests = "^2.31.0"
types-PyMySQL = "^1.0.0"
boto3-stubs = "^1.37.33"
msgpack-types = "^0.5.0"
types-appdirs = "^1.4.3.5"
types-cachetools = "^5.5.0.20240820"
flake8-pyproject = "^1.2.3"
safety = "^3.2.4"
pytest = "^8.3.2"
pytest-cov = "^6.1.1"
pre-commit = "^4.1.0"
types-toml = "^0.10.8"
maturin = "^1.4.0"
patchelf = "^0.17.2.2"

[tool.poetry.scripts]
indexer = "start:main"
run_safety = "tools.run_safety:run_safety_check"
run_checks = "tools.run_checks:main"
install-hooks = "tools.install_hooks:main"
postinstall = "tools.install_hooks:main"
compare_tables = "tools.compare_tables:main"
test-setup = "start:test_setup"
check = "tools.run_checks:main"
check-code = "tools.run_checks:run_code_quality_checks_standalone"
check-rust = "tools.run_checks:run_rust_checks_standalone"
check-integration = "tools.run_checks:run_integration_tests_standalone"
reparse = "index_core.reparse.validator:main"
save-snapshot = "index_core.reparse.snapshot:create_snapshot"
rollback = "tools.rollback_db:main"
dump-seeds = "tools.dump_seeds:main"
dump-block-fixtures = "tools.dump_block_fixtures:main"
dump-state-fixtures = "tools.dump_state_fixtures:main"

[[tool.poetry.packages]]
from = "src"
include = "index_core/**/*"

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.flake8]
max-line-length = 127
exclude = [".tox", "build", ".venv", "venv", ".env"]
extend-ignore = ["E203", "W503", "E402", "E501", "C901"]
jobs = 1

[tool.taskipy.tasks]
bandit = "bandit -r src/ tests/ tools/ -s B608 -lll"
import_background = "poetry run python3 tools/import_background.py"
build = "maturin develop --manifest-path src/rust_parser/Cargo.toml --release"
build-dev = "maturin develop --manifest-path src/rust_parser/Cargo.toml"
check = "python -m tools.run_checks"
check-code = "python -m tools.run_checks code"
check-rust = "python -m tools.run_checks rust"
check-integration = "python -m tools.run_checks integration"
reparse = "python -m index_core.reparse.validator"
save-snapshot = "python -m index_core.reparse.snapshot create"
validate-snapshot = "python -m index_core.reparse.validator --validate-only"
test = "pytest tests/ -v"
test-src20 = "pytest tests/test_src20.py -v -s"
test-thread-safety = "pytest tests/test_src20_thread_safety.py -v"
test-thread-safety-debug = "python tests/thread_safety/test_thread_safety.py"
test-reorg = "pytest tests/test_reorg_handling.py -v -s"

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
explicit_package_bases = false
namespace_packages = true
exclude = ['tools_priv/*', 'build/*', 'tools/*']
# Don't fail on untyped functions
check_untyped_defs = false
disallow_untyped_defs = false
# Disable specific error codes
disable_error_code = [
    "annotation-unchecked",  # Don't show messages about untyped functions
    "arg-type"  # Don't fail on argument type mismatches
]

# Per-module configuration
[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tools_priv.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "index_core.reparse.*"
disallow_untyped_defs = true
check_untyped_defs = true

[tool.safety]
ignore = [
    "64396",  # Ecdsa does not protect against side-channel attacks
    "64459",  # The python-ecdsa library is vulnerable to the Minerva attack
    "67599",   # An issue in pip regarding the --extra-index-url option
    "70612",   # Jinja2, the from_string function is prone to Server Side Template Injection
    "71891",   # js2py vulnerability CVE-2024-28397 - not using js2py directly
    "70716",   # python-jose DoS vulnerability CVE-2024-33664
    "70715"    # python-jose algorithm confusion vulnerability CVE-2024-33663
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Setting environment for tests
env = [
    "PYTHONPATH=src:.",
    "USE_TEST_TX_HEX=1",
    "TESTING=1",
    "USE_TEST_DB=1",
    "MOCK_DB=1"
]

[tool.pytest.ini_options]
addopts = "-v -p no:warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::sqlalchemy.exc.MovedIn20Warning",
    "ignore::UserWarning"
] 