[package]
name = "btc_stamps_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "btc_stamps_parser"
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.31.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
hex = "0.4.3"
rayon = "1.8.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 