[package]
name = "btc_stamps_parser"
version = "0.1.0"
edition = "2021"
description = "Fast Bitcoin transaction parser for Bitcoin Stamps Indexer"

[lib]
name = "btc_stamps_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
bitcoin = { version = "0.31", features = ["rand"] }
hex = "0.4"
rayon = "1.8"
log = "0.4"
rust-crypto = "0.2.36"
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 